--- a/react-app/app/components/ModificationPanel.css
+++ b/react-app/app/components/ModificationPanel.css
@@ -1,7 +1,5 @@
 .modification-panel {
     position: absolute;
-    top: 100px;
-    right: 20px;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
@@ -9,6 +7,16 @@
     z-index: 1000;
     width: 300px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+}
+
+.add-request {
+    top: 20px;
+    right: 20px;
+}
+
+.courier-selection {
+    bottom: 20px;
+    right: 20px;
 }
 
 .modification-panel h3 {
@@ -85,4 +93,9 @@
     color: #333333;
     padding-left: 5px;
     margin-left: 10px;
+}
+
+.modification-panel label {
+    display: block;
+    color: #333333;
 }
