--- a/react-app/app/routes/home.css
+++ b/react-app/app/routes/home.css
@@ -1,7 +1,18 @@
+.home .home-button {
+    background-color: #b1b1b1;
+    color: #333333;
+    padding: 5px;
+}
+
+.home input {
+    width: 300px;
+    margin-left: 10px;
+}
+
 .success-message {
     color: green;
     margin-top: 10px;
-  }
+}
 
 .delete-button {
     background-color: #f44336; /* Red */
