--- a/react-app/app/app.css
+++ b/react-app/app/app.css
@@ -15,7 +15,7 @@ body {
 }
 
 .leaflet-container {
-    height: 80vh;
+    height: 100vh;
     width: 100vw;
 }
 
@@ -31,6 +31,7 @@ div {
 }
 
 button {
+    width: 130px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -39,11 +40,9 @@ button {
     margin: 3px;
 }
 
-input {
-    border: thin solid #333333;
+select {
+    padding: 3px;
     border-radius: 3px;
     background-color: #f1f1f1;
     color: #333333;
-    padding-left: 5px;
-    margin-left: 10px;
 }
