--- a/react-app/app/routes/home.css
+++ b/react-app/app/routes/home.css
@@ -6,7 +6,16 @@
 
 .home input {
     width: 300px;
+    border: thin solid #333333;
+    border-radius: 3px;
+    background-color: #f1f1f1;
+    color: #333333;
+    padding-left: 5px;
     margin-left: 10px;
+}
+
+.home label {
+    margin-right: 8px;
 }
 
 .success-message {
@@ -31,4 +40,61 @@
 
 .map-popup-content {
     color: black;
+}
+
+.home-container {
+    display: flex;
+    height: 100vh;
+}
+
+.side-panel-and-toggle {
+    position: absolute;
+    display: flex;
+    height: 100%;
+    transition: transform 0.3s ease-in-out;
+}
+
+.side-panel {
+    position: absolute;
+    width: 380px;
+    height: 100%;
+    background-color: #000000;
+    padding: 16px;
+    transition: transform 0.3s ease-in-out;
+    display: flex;
+    z-index: 1000;
+}
+
+.side-panel.closed {
+    transform: translateX(-100%);
+    width: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.side-panel.open {
+    transform: translateX(0);
+}
+
+.side-panel-toggle {
+    position: relative;
+    top: 50%;
+    right: -18px;
+
+    width: 18px;
+    height: 60px;
+
+    background-color: #ffffff;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    cursor: pointer;
+
+    z-index: 1100;
+}
+
+.map-container {
+    flex: 1;
 }
