Add a side panel to clean the functionalities menu and fix request adding when there was no warehouse
- Add a side panel
- use colors of the maquette
- now keeps the request when setting the warehouse so you don't have to remake it

--- a/react-app/app/components/ModificationPanel.css
+++ b/react-app/app/components/ModificationPanel.css
@@ -15,7 +15,7 @@
 }
 
 .courier-selection {
-    bottom: 20px;
+    bottom: 5px;
     right: 20px;
 }
 
@@ -45,12 +45,17 @@
 }
 
 .modification-panel .add-button {
-    background-color: #007bff;
-    color: white;
+    background-color: #D17B96;
+    color: #EADDFF;
+}
+
+.home-container .add-button:hover {
+    font-weight: 1000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .modification-panel .add-button:disabled {
-    background-color: #a0cfff;
+    background-color: rgba(209, 123, 150, 0.7);
     cursor: not-allowed;
 }
 
