--- a/react-app/app/components/Modal.css
+++ b/react-app/app/components/Modal.css
@@ -8,32 +8,41 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1000;
-  }
-  
-  .modal-content {
-    background: #000000;
+    z-index: 1100;
+}
+
+.modal-content {
+    background: #D17B96;
     padding: 20px;
+    margin: 0;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    color: #6c757d;
-  }
-  
-  .modal-content p {
+    color: #f1f1f1;
+}
+
+.modal-actions {
+    display: flex;
+    gap: 8px;
+    justify-content: flex-end;
+    margin-top: 12px;
+    margin-bottom: 0;
+}
+
+.modal-content p {
     margin-bottom: 20px;
-  }
-  
-  .modal-content button {
+}
+
+.modal-content button {
     padding: 10px 20px;
     border: none;
-    background-color: #007bff;
-    color: #ffffff;
+    background-color: #A33C5D;
+    color: #f1f1f1;
     border-radius: 5px;
     cursor: pointer;
-  }
-  
-  .modal-content button:hover {
-    background-color: #0056b3;
-  }
-  
+}
+
+.modal-content button:hover {
+    font-weight: 1000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
