--- a/react-app/app/routes/home.css
+++ b/react-app/app/routes/home.css
@@ -61,7 +61,7 @@
 }
 
 .side-panel-and-toggle.closed {
-    transform: translateX(-34%);
+    transform: translateX(-80%);
 }
 
 .side-panel-and-toggle.open {
@@ -69,7 +69,7 @@
 }
 
 .side-panel {
-    width: 35%;
+    width: 380px;
     height: 100%;
     background-color: #EDC7B7;
     padding: 16px;
@@ -77,12 +77,15 @@
 }
 
 .side-panel-toggle {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 18px;
+    width: 60px;
     height: 60px;
-    margin-top: calc(50vh - 30px);
+    left: -30px;
+    margin-top: 2%;
+    border-radius: 50%;
     background-color: #EDC7B7;
     cursor: pointer;
 }
