--- a/react-app/app/components/HamburgerButton.css
+++ b/react-app/app/components/HamburgerButton.css
@@ -13,7 +13,7 @@
     position: absolute;
     width: 30px;
     height: 5px;
-    background-color: #EADDFF;
+    background-color: #A33C5D;
     border-radius: 4px;
     transition: all 0.3s ease-in-out;
 }
