--- a/react-app/app/components/ModificationPanel.css
+++ b/react-app/app/components/ModificationPanel.css
@@ -1,6 +1,6 @@
 .modification-panel {
     position: absolute;
-    background-color: #ffffff;
+    background-color: #EDC7B7;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
@@ -19,10 +19,29 @@
     right: 20px;
 }
 
+.courier-selection > div {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.courier-selection label {
+    display: flex;
+    align-items: center;
+}
+
+.courier-selection p {
+    width: 175px;
+}
+
+.courier-selection input[type="radio"] {
+    width: fit-content;
+}
+
 .modification-panel h3 {
     margin-top: 0;
-    font-size: 18px;
-    color: #333333;
+    font-size: 20px;
+    color: #A33C5D;
 }
 
 .modification-panel .info-label {
