--- a/react-app/app/routes/home.css
+++ b/react-app/app/routes/home.css
@@ -70,10 +70,13 @@
 
 .side-panel {
     width: 380px;
-    height: 100%;
+    height: calc(100% - 2%);
     background-color: #EDC7B7;
     padding: 16px;
     display: flex;
+    margin: 2% 0;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
 }
 
 .side-panel-toggle {
@@ -97,7 +100,7 @@
 }
 
 .side-panel-and-toggle.open .search-container {
-    left: 150px;
+    left: 145px;
 }
 
 .side-panel-and-toggle.closed .search-container {
