--- a/react-app/app/components/SearchBar.css
+++ b/react-app/app/components/SearchBar.css
@@ -1,29 +1,21 @@
-.search-container {
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 400px;
-    z-index: 1001;
-}
-
 .search-input {
-    width: 100%;
-    padding: 10px;
+    padding: 8px;
     font-size: 16px;
     background-color: #f1f1f1;
     border: thin solid #A33C5D;
     color: #333333;
+    box-sizing: border-box;
 }
 
 .search-results {
-    background-color: #EDC7B7;
+    position: relative;
+    background-color: #D17B96;
     color: #EADDFF;
-    border: 1px solid #ccc;
-    border-top: none;
-    border-radius: 0 0 5px 5px;
+    border-radius: 0 0 10px 10px;
     max-height: 200px;
     overflow-y: auto;
+    left: 10px;
+    width: 300px;
 }
 
 .search-results div {
@@ -32,5 +24,6 @@
 }
 
 .search-results div:hover {
-    background-color: #f0f0f0;
+    font-weight: 1000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
