--- a/react-app/app/app.css
+++ b/react-app/app/app.css
@@ -12,6 +12,8 @@ body {
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+
+    margin: 0;
 }
 
 .leaflet-container {
@@ -24,7 +26,7 @@ h1 {
     margin: 15px 0 10px 0;
     font-size: 24px;
     font-weight: 600;
-    color: #a0cfff;
+    color: #123D6A;
 }
 
 div {
@@ -38,12 +40,14 @@ button {
     cursor: pointer;
     font-size: 14px;
     font-weight: 600;
-    margin: 3px;
+    margin: 3px 3px 3px 10px;
 }
 
 select {
-    padding: 3px;
-    border-radius: 3px;
+    border: thin solid #A33C5D;
+    border-radius: 5px;
     background-color: #f1f1f1;
     color: #333333;
+    padding-left: 5px;
+    margin-left: 10px;
 }
