--- a/react-app/app/components/Modal.css
+++ b/react-app/app/components/Modal.css
@@ -1,9 +1,6 @@
 .modal-overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
@@ -40,6 +37,7 @@
     color: #f1f1f1;
     border-radius: 5px;
     cursor: pointer;
+    width: fit-content;
 }
 
 .modal-content button:hover {
