--- a/react-app/app/components/ModificationPanel.css
+++ b/react-app/app/components/ModificationPanel.css
@@ -14,6 +14,11 @@
     right: 20px;
 }
 
+.update-order {
+    top: 20px;
+    right: 20px;
+}
+
 .courier-selection {
     bottom: 5px;
     right: 20px;
@@ -57,6 +62,7 @@
 .modification-panel .actions {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 0;
 }
 
 .modification-panel button {
@@ -93,18 +99,24 @@
     background-color: #28a745;
 }
 
-.modification-panel select {
-    border-radius: 5px;
-    background-color: #f1f1f1;
-    color: #333333;
-    padding-left: 5px;
-    margin-left: 10px;
-}
-
 .modification-panel .panel-input {
     width: 3rem;
 }
 
-.modification-panel label {
+.modification-panel select {
+    color: #333333;
+}
+
+.radio-input {
+    margin-bottom: 0;
+}
+
+.radio-input input[type="radio"] {
+    width: auto;
+}
+
+.radio-input label {
+    display: flex;
+    gap: 8px;
     color: #333333;
 }
